--- a/app/src/main/res/layout/tek_satir.xml
+++ b/app/src/main/res/layout/tek_satir.xml
@@ -1,7 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-</LinearLayout>
+    <ImageView
+            android:layout_width="72dp"
+            android:layout_height="72dp" app:srcCompat="@drawable/boga2"
+            android:id="@+id/imgBurcSembol" tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+            android:text="TextView"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvBurcAdi" app:layout_constraintStart_toEndOf="@+id/imgBurcSembol"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toTopOf="@+id/imgBurcSembol"
+            android:textSize="24sp" android:textStyle="bold" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_width="0dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvBurcTarih" app:layout_constraintStart_toEndOf="@+id/imgBurcSembol"
+            android:layout_marginStart="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imgBurcSembol" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:textStyle="italic" android:fontFamily="casual"/>
+</android.support.constraint.ConstraintLayout>
