--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -28,6 +28,17 @@
         <item>22 Ocak - 19 Şubat</item>
         <item>20 Şubat - 20 Mart </item>
     </string-array>
+    <string-array name="bubble">
+        <item>#41ffffff</item>
+        <item>#18ffffff</item>
+        <item>#1fffffff</item>
+        <item>#25ffffff</item>
+    </string-array>
+    <string-array name="BubbleAnimations">
+        <item>com.github.glomadrian.grav.generator.animation.SideToSideAnimator</item>
+        <item>com.github.glomadrian.grav.generator.animation.ShakeAnimator</item>
+    </string-array>
+
     <string-array name="burcGenelOzellikler">
         <item>\tElement: Ateş\n\n
             \tGezegen: Mars (Çekicilik ve savaş )\n\n
