--- a/app/src/main/res/layout/activity_detay.xml
+++ b/app/src/main/res/layout/activity_detay.xml
@@ -60,7 +60,9 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-            android:id="@+id/tvBurcOzellikleri"/>
+                    android:id="@+id/tvBurcOzellikleri"
+                    android:textSize="16sp"
+            />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
