--- a/app/src/main/res/layout/activity_detay.xml
+++ b/app/src/main/res/layout/activity_detay.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true" android:id="@+id/coordinatorLayoutDetay">
 
     <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
@@ -48,22 +48,10 @@
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
+    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                            android:layout_height="match_parent"
+                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                                            android:id="@+id/recyclerViewOzellik">
 
-    <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tvBurcOzellikleri"
-                    android:textSize="16sp"
-            />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-
+    </android.support.v7.widget.RecyclerView>
 </android.support.design.widget.CoordinatorLayout>
